added notes for config values

--- a/config.ini
+++ b/config.ini
@@ -6,6 +6,6 @@ guild_id = xxx
 [qbit]
 # change to your qbittorrent host and port:  http://host_ip:port 
 host = http://10.0.0.153:8080
-#qbittorrent webUI login creds
+#qbittorrent webUI login creds for your instance. you can also do what I do and just create whitelist rules for login.
 user = admin
 pass = 12211221
