allow list of guilds

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [Bot]
 # change to your bot token and server id
 token = xxx
-guild_id = xxx
+guild_id = xxx, xxx
 
 [qbit]
 # change to your qbittorrent host and port:  http://host_ip:port 
