init commit for refactor

--- a/config.ini
+++ b/config.ini
@@ -4,8 +4,8 @@ token = xxx
 guild_id = xxx, xxx
 
 [qbit]
-# change to your qbittorrent host and port:  http://host_ip:port 
-host = http://10.0.0.153:8080
+# change to your qbittorrent host and port. Should look like this:  http://host_ip:port or  http://12.0.0.1:port or http://0.0.0.0:port OR IMPORTANTLY http://host.docker.internal:8080 if you are using docker
+host = http://host.docker.internal:8080
 #qbittorrent webUI login creds for your instance. you can also do what I do and just create whitelist rules for login.
 user = admin
-pass = 12211221
+pass = xxx
