--- a/config.ini
+++ b/config.ini
@@ -4,8 +4,8 @@ token = xxx
 guild_id = xxx, xxx
 
 [qbit]
-# change to your qbittorrent host and port. Should look like this:  http://host_ip:port or  http://12.0.0.1:port or http://0.0.0.0:port OR IMPORTANTLY http://host.docker.internal:8080 if you are using docker
+# change to your qbittorrent host and port. Should look like this:  http://host_ip:port or  http://12.0.0.1:port or http://0.0.0.0:port OR IMPORTANTLY http://host.docker.internal:8080 if you are using docker (win/MacOS)
 host = http://host.docker.internal:8080
-#qbittorrent webUI login creds for your instance. you can also do what I do and just create whitelist rules for login.
+#qbittorrent webUI login creds for your instance.
 user = admin
-pass = xxx
+pass = adminadmin
