Refactor torrent management bot and backend to support 1377x.to scraping
- Updated app.py to implement scraping logic for 1377x.to, including search and detail magnet extraction.
- Enhanced bot.py to utilize a session-based qBittorrent client for persistent authentication.
- Added new test cases in bitsearch_service_test.py to validate scraping functionality against 1377x.to.
- Modified Dockerfile to include start.sh script and updated requirements.txt to include qbittorrent library.
- Improved error handling and logging throughout the application for better debugging and user feedback.

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ configparser
 discord.py
 humanize
 gunicorn
+qbittorrent
 
 # Pycord for Discord bot development
 git+https://github.com/Pycord-Development/pycord#egg=py-cord
